; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_initial_ref_transaction_commit.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_initial_ref_transaction_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_transaction = type { %struct.ref_store* }
%struct.ref_store = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ref_store*, %struct.ref_transaction*, %struct.strbuf*)* }
%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @initial_ref_transaction_commit(%struct.ref_transaction* %0, %struct.strbuf* %1) #0 {
  %3 = alloca %struct.ref_transaction*, align 8
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca %struct.ref_store*, align 8
  store %struct.ref_transaction* %0, %struct.ref_transaction** %3, align 8
  store %struct.strbuf* %1, %struct.strbuf** %4, align 8
  %6 = load %struct.ref_transaction*, %struct.ref_transaction** %3, align 8
  %7 = getelementptr inbounds %struct.ref_transaction, %struct.ref_transaction* %6, i32 0, i32 0
  %8 = load %struct.ref_store*, %struct.ref_store** %7, align 8
  store %struct.ref_store* %8, %struct.ref_store** %5, align 8
  %9 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %10 = getelementptr inbounds %struct.ref_store, %struct.ref_store* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.ref_store*, %struct.ref_transaction*, %struct.strbuf*)*, i32 (%struct.ref_store*, %struct.ref_transaction*, %struct.strbuf*)** %12, align 8
  %14 = load %struct.ref_store*, %struct.ref_store** %5, align 8
  %15 = load %struct.ref_transaction*, %struct.ref_transaction** %3, align 8
  %16 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %17 = call i32 %13(%struct.ref_store* %14, %struct.ref_transaction* %15, %struct.strbuf* %16)
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
